after ok get all permissions
